[gd_scene load_steps=14 format=3 uid="uid://coxu8wtr6806f"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7bsrf"]
[ext_resource type="Texture2D" uid="uid://cl1re3u8mo71k" path="res://sprites/gj_ch_sprsht.png" id="2_dm7bx"]
[ext_resource type="AudioStream" uid="uid://bwjm788a8liii" path="res://audio/jump.wav" id="3_apq4t"]
[ext_resource type="AudioStream" uid="uid://bpp0sklkawof8" path="res://audio/orb.wav" id="4_6ya0m"]
[ext_resource type="AudioStream" uid="uid://qb2br6pkhwpv" path="res://audio/token.wav" id="5_mgkgb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0eos6"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsfwu"]
atlas = ExtResource("2_dm7bx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mu1k"]
atlas = ExtResource("2_dm7bx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_icd0p"]
atlas = ExtResource("2_dm7bx")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf5fs"]
atlas = ExtResource("2_dm7bx")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4j8c"]
atlas = ExtResource("2_dm7bx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_sj7gc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsfwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mu1k")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_icd0p")
}],
"loop": true,
"name": &"Jump_Fall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf5fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4j8c")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}]

[sub_resource type="GDScript" id="GDScript_brter"]
script/source = "extends Camera2D


func handle_camera() -> void:
	global_position.x = 120


func _process(delta):
	handle_camera()
"

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_7bsrf")
metadata/_edit_vertical_guides_ = [-73.0]

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0eos6")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sj7gc")
animation = &"Run"
frame_progress = 0.901977

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(120, -72)
position_smoothing_enabled = true
drag_vertical_enabled = true
drag_top_margin = 1.0
drag_bottom_margin = 0.0
script = SubResource("GDScript_brter")

[node name="OrbTime" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpSfx" type="AudioStreamPlayer2D" parent="." groups=["audio"]]
stream = ExtResource("3_apq4t")
bus = &"sfx"

[node name="OrbSfx" type="AudioStreamPlayer2D" parent="." groups=["audio"]]
stream = ExtResource("4_6ya0m")
bus = &"sfx"

[node name="TokenSfx" type="AudioStreamPlayer2D" parent="." groups=["audio"]]
stream = ExtResource("5_mgkgb")
bus = &"sfx"
